remove and ignore downstream metadata

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ results/
 
 # ignore snakemake outputs 
 .snakemake/
+
+# metadata files for downstream analyses 
+sample-info/*-downstream-metadata.tsv
