--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ results/
 
 # metadata files for downstream analyses 
 sample-info/*-downstream-metadata.tsv
+
+# Python
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
