--- a/config.yaml
+++ b/config.yaml
@@ -12,4 +12,6 @@ celltype_file: "sample-info/hca-celltype-info.tsv"
 seed: 2022
 num_hvg: 5000
 grouping_var: "project_name"
+
+# for scvi only, what columns in the coldata should be used as covariates in integration
 continuous_covariates: "subsets_mito_percent"
