--- a/config-scib_simulated.yaml
+++ b/config-scib_simulated.yaml
@@ -1,20 +1,14 @@
+# Config file with relevant parameters updated for running `scib_simulated` data
+#  through the Snakefile
+
 ## data specific params
 processed_tsv: "sample-info/scib-simulated-processed-libraries.tsv"
 sce_dir: "results/scib_simulated/scpca-downstream-analyses"
 results_dir: "results/scib_simulated"
 pepfile: "sample-info/scib-simulated-project-pep.yaml"
 
-# cell type information paramaters
+# cell type information parameters
 add_celltype: false
-celltype_file: "sample-info/hca-celltype-info.tsv"
-
-# workflow paramters
-seed: 2022
-num_hvg: 5000
-grouping_var: "project_name"
 
 # params for scvi only
-# what columns in the coldata should be used as covariates in integration
 continuous_covariates: None
-# how many dimensions to return in the latent space
-num_latent: 20
