--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 ## data specific params
-processed_tsv: "sample-info/scib-simulated-processed-libraries.tsv"
-sce_dir: "results/scib_simulated/scpca-downstream-analyses"
-results_dir: "results/scib_simulated"
-pepfile: "sample-info/scib-simulated-project-pep.yaml"
+processed_tsv: "sample-info/hca-processed-libraries.tsv"
+sce_dir: "results/human_cell_atlas/scpca-downstream-analyses"
+results_dir: "results/human_cell_atlas"
+pepfile: "sample-info/hca-project-pep.yaml"
 
 # cell type information paramaters
-add_celltype: false
+add_celltype: true
 celltype_file: "sample-info/hca-celltype-info.tsv"
 
 # workflow paramters
