change to pull_request
Co-authored-by: Joshua Shapiro <josh.shapiro@ccdatalab.org>

--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -1,9 +1,11 @@
 name: Test integration workflow
 
 on:
-    push:
-        branches:
-            - main
+  pull_request:
+    - main
+  push:
+    branches:
+      - allyhawkins/snakemake-github-action
 
 jobs:
     runs-on: ubuntu-latest
