--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -2,21 +2,23 @@ name: Test integration workflow
 
 on:
   pull_request:
-    - main
+    branches:
+      - main
   push:
     branches:
       - allyhawkins/snakemake-github-action
 
 jobs:
+  test-snakemake:
     runs-on: ubuntu-latest
 
     steps:
-        - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-        - name: Test snakemake
-          uses: snakemake/snakemake-github-action@v1
+      - name: Test snakemake
+        uses: snakemake/snakemake-github-action@v1
           with:
-            directory: '.test'
-            snakefile: 'Snakefile'
-            args: '--cores 1 --dry-run'
-            task: 'run'
+          directory: '.test'
+          snakefile: 'Snakefile'
+          args: '--list'
+          task: 'run'
