--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Test snakemake
-        uses: snakemake/snakemake-github-action@v1
+        uses: snakemake/snakemake-github-action@v1.24.0
         with:
           directory: '.test'
           snakefile: 'Snakefile'
-          args: '--list'
+          args: '--list --configfile config.yaml'
           task: 'run'
