remove configfile arg
Co-authored-by: Joshua Shapiro <josh.shapiro@ccdatalab.org>

--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           directory: '.'
           snakefile: 'Snakefile'
-          args: '--list --configfile config.yaml'
+          args: '--list'
           task: 'run'
