--- a/sample-info/scpca-project-pep.yaml
+++ b/sample-info/scpca-project-pep.yaml
@@ -1,7 +1,7 @@
 pep_version: 2.1.0
 # see http://pep.databio.org/en/latest/specification/
 sample_table: "scpca-project-metadata.tsv"
-sample_table_index: "scpca_project_id"
+sample_table_index: "project_name"
 
 # Add sample_name to support older peppy
 sample_modifiers:
