fix typos in config

--- a/config-scpca.yaml
+++ b/config-scpca.yaml
@@ -2,10 +2,12 @@
 #  through the Snakefile
 
 ## data specific params
-processed_tsv: "sample-info/scpca-simulated-processed-libraries.tsv"
+processed_tsv: "sample-info/scpca-processed-libraries.tsv"
 sce_dir: "results/scpca/scpca-downstream-analyses"
 results_dir: "results/scpca"
-pepfile: "sample-info/scpca-simulated-project-pep.yaml"
+pepfile: "sample-info/scpca-project-pep.yaml"
 
 # cell type information parameters
 add_celltype: false
+
+grouping_var: "scpca_project_id"
