Added 'asw_separate_cell_types' param to report to handle whether to perform cell asw grouped by celltype

--- a/config/config-scib_simulated.yaml
+++ b/config/config-scib_simulated.yaml
@@ -12,3 +12,6 @@ add_celltype: false
 
 # params for scvi only
 continuous_covariates: None
+
+# params for analysis report
+asw_separate_cell_types: TRUE
