add integration group to config

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,3 +19,5 @@ integration_methods: ["fastmnn", "harmony", "seurat-cca", "seurat-rpca"]
 continuous_covariates: "subsets_mito_percent"
 # how many dimensions to return in the latent space
 num_latent: 20
+
+groups_to_integrate: "All"
