Apply suggestions from code review
Co-authored-by: Stephanie <stephanie.spielman@gmail.com>

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,5 +22,5 @@ continuous_covariates: "subsets_mito_percent"
 num_latent: 20
 
 # specify which projects to run through the workflow
-# to run a subset of projects use a list '["1M_Immune_Cells", "HumanBrainSubstantiaNigra"]'
+# to run a subset of projects use a python-formatted list '["1M_Immune_Cells", "HumanBrainSubstantiaNigra"]'
 groups_to_integrate: "All"
