--- a/config/config.yaml
+++ b/config/config.yaml
@@ -24,5 +24,5 @@ num_latent: 20
 # to run a subset of projects use a python-formatted list '["1M_Immune_Cells", "HumanBrainSubstantiaNigra"]'
 groups_to_integrate: "All"
 
-# randomize merge order prior to integration 
-random_merge: true
+# randomize merge order prior to integration
+random_merge: '--random_merge'
