ignore singler models

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ analysis_templates/*.html.zip
 # celltype references and data
 celltype_annotation/references
 celltype_annotation/data
+celltype_annotation/singler_models
 
 
 
